Added box shadows and more media queries

--- a/code/index.html
+++ b/code/index.html
@@ -38,6 +38,8 @@
       </nav>
     </header>
 
+    <main class="main-container">
+
     <!-- The big news content -->
 
     <section class="big-news">
@@ -58,6 +60,15 @@
           pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
           culpa qui officia deserunt mollit anim id est laborum.
         </p>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
+          minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+          aliquip ex ea commodo consequat. Duis aute irure dolor in
+          reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+          pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
+          culpa qui officia deserunt mollit anim id est laborum.
+        </p>
       </article>
     </section>
 
@@ -65,170 +76,73 @@
 
     <section class="other-news">
       <article class="card">
-        <header class="card-header">
-          <h2>Heading</h2>
-        </header>
         <img
           src="./images/johannes-hofmann-PM5a_R83-YQ-unsplash-edited.jpg"
           alt="train on a bridge"
         />
         <div class="other-news-content">
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-            ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-            aliquip ex ea commodo consequat. Duis aute irure dolor in
-            reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-            pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-            culpa qui officia deserunt mollit anim id est laborum.
-          </p>
+            <h2>Heading</h2>
         </div>
       </article>
       <article class="card">
-        <header class="card-header">
-          <h2>Heading</h2>
-        </header>
         <img
           src="./images/johannes-hofmann-PM5a_R83-YQ-unsplash-edited.jpg"
           alt="train on a bridge"
         />
         <div class="other-news-content">
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-            ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-            aliquip ex ea commodo consequat. Duis aute irure dolor in
-            reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-            pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-            culpa qui officia deserunt mollit anim id est laborum.
-          </p>
+            <h2>Heading</h2>
         </div>
       </article>
       <article class="card">
-        <header class="card-header">
-          <h2>Heading</h2>
-        </header>
         <img
           src="./images/johannes-hofmann-PM5a_R83-YQ-unsplash-edited.jpg"
           alt="train on a bridge"
         />
         <div class="other-news-content">
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-            ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-            aliquip ex ea commodo consequat. Duis aute irure dolor in
-            reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-            pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-            culpa qui officia deserunt mollit anim id est laborum.
-          </p>
+            <h2>Heading</h2>
         </div>
       </article>
       <article class="card">
-        <header class="card-header">
-          <h2>Heading</h2>
-        </header>
         <img
           src="./images/johannes-hofmann-PM5a_R83-YQ-unsplash-edited.jpg"
           alt="train on a bridge"
         />
         <div class="other-news-content">
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-            ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-            aliquip ex ea commodo consequat. Duis aute irure dolor in
-            reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-            pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-            culpa qui officia deserunt mollit anim id est laborum.
-          </p>
+            <h2>Heading</h2>
         </div>
       </article>
       <article class="card">
-        <header class="card-header">
-          <h2>Heading</h2>
-        </header>
         <img
           src="./images/johannes-hofmann-PM5a_R83-YQ-unsplash-edited.jpg"
           alt="train on a bridge"
         />
         <div class="other-news-content">
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-            ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-            aliquip ex ea commodo consequat. Duis aute irure dolor in
-            reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-            pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-            culpa qui officia deserunt mollit anim id est laborum.
-          </p>
+            <h2>Heading</h2>
         </div>
       </article>
       <article class="card">
-        <header class="card-header">
-          <h2>Heading</h2>
-        </header>
         <img
           src="./images/johannes-hofmann-PM5a_R83-YQ-unsplash-edited.jpg"
           alt="train on a bridge"
         />
         <div class="other-news-content">
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-            ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-            aliquip ex ea commodo consequat. Duis aute irure dolor in
-            reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-            pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-            culpa qui officia deserunt mollit anim id est laborum.
-          </p>
+            <h2>Heading</h2>
         </div>
       </article>
       <article class="card">
-        <header class="card-header">
-          <h2>Heading</h2>
-        </header>
         <img
           src="./images/johannes-hofmann-PM5a_R83-YQ-unsplash-edited.jpg"
           alt="train on a bridge"
         />
         <div class="other-news-content">
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-            ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-            aliquip ex ea commodo consequat. Duis aute irure dolor in
-            reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-            pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-            culpa qui officia deserunt mollit anim id est laborum.
-          </p>
+            <h2>Heading</h2>
         </div>
       </article>
-      <!-- 
-      <article class="card">
-        <header class="card-header">
-          <h2>Heading</h2>
-        </header>
-        <img
-          src="./images/johannes-hofmann-PM5a_R83-YQ-unsplash-edited.jpg"
-          alt="train on a bridge"
-        />
-        <div class="other-news-content">
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-            ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-            aliquip ex ea commodo consequat. Duis aute irure dolor in
-            reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-            pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-            culpa qui officia deserunt mollit anim id est laborum.
-          </p>
-        </div>
-      </article>
-     -->
     </section>
 
     <!-- End other news -->
+
+  </main>
 
     <!-- Footer -->
 
