--- a/code/index.html
+++ b/code/index.html
@@ -11,6 +11,7 @@
 
     <title>Foodies</title>
     <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   
   </head>
   <body>
@@ -32,7 +33,7 @@
 
     <!-- The big news content -->
     
-    <div class="row">
+    <div class="big-news">
       <div class="column_1">
       <img src="Images\wine2.jpg" class="main-photo">
       </div>
@@ -85,5 +86,15 @@
       </div></div>
 
     </section>
+
+
+    <footer>
+      <div class="footer-socials">
+        <a href="#" class="fa fa-facebook"></a>
+        <a href="#" class="fa fa-twitter"></a>
+        <a href="#" class="fa fa-instagram"></a>
+      </div>
+    </footer>
+
   </body>
 </html>
