--- a/code/index.html
+++ b/code/index.html
@@ -79,7 +79,7 @@
       <div class="childTwo">
         <div class="polaroid">
           <img src="img/fish.jpg" alt="fish fry"/>
-          <p>Fresh fish</p>
+          <p>Fried fish</p>
         </div>
         <div>
           <h1>Local cuisine</h1>
