--- a/code/index.html
+++ b/code/index.html
@@ -13,9 +13,9 @@
     <header>
       <nav>
         <ul>
-        <li><a href="news.asp"> News</a></li>
-        <li><a href="contact.asp">Contact</a></li>
-        <li><a href="about.asp">About</a></li>
+        <li><a href="https://www.goodreads.com/work/quotes/3078186-the-hitchhiker-s-guide-to-the-galaxy"> News</a></li>
+        <li><a href="https://www.goodreads.com/work/quotes/3078186-the-hitchhiker-s-guide-to-the-galaxy">Contact</a></li>
+        <li><a href="https://www.goodreads.com/work/quotes/3078186-the-hitchhiker-s-guide-to-the-galaxy">About</a></li>
       </ul>
     </nav>
     <h1 class="site-name">STRAWBERRY NEWS <br> 
@@ -47,7 +47,8 @@
         <p class="article"> For instance, on the planet Earth, man had always assumed that he was more intelligent 
           than dolphins because he had achieved so much—the wheel, New York, wars and so on—whilst all the dolphins 
           had ever done was muck about in the water having a good time. 
-          But conversely, the dolphins had always believed that they were far more intelligent than man—for precisely the same reasons.</p>      
+          But conversely, the dolphins had always believed that they were far more intelligent than man—for precisely the same reasons. 
+          <a href="https://www.goodreads.com/work/quotes/3078186-the-hitchhiker-s-guide-to-the-galaxy"> <span class="read-more">Read more</span></a></p>   
   </div>         
 </div>
         </main>
@@ -61,10 +62,11 @@
     <section>
       <!-- The other news  -->
       <aside>
+        <div class="related-news-h1-container">
         <h1 class="related-news">RELATED NEWS</h1>
+      </div>
 
         <div class="news-grid">
-
           <div class="news-grid-item">
             <img class="grid-img" 
             src="https://images.unsplash.com/photo-1513612254505-fb553147a2e8?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MjV8fHN0cmF3YmVycmllc3xlbnwwfDB8MHx8&auto=format&fit=crop&w=500&q=60" 
@@ -76,14 +78,14 @@
           <img class="grid-img"
           src="https://media.istockphoto.com/photos/fresh-strawberries-in-transparent-glass-bowl-top-view-healthy-food-on-picture-id1288144126?b=1&k=20&m=1288144126&s=170667a&w=0&h=Ko3kfCCwngKzzYhdUz0T4vr1MsTDUMKJ5EPGQ7rUO4w="
           alt="pink-berries">
-          <h2 class="news-grid-heading">I'd far rather be happy than right any day</h2>
+          <h2 class="news-grid-heading">"I'd far rather be happy than right any day"</h2>
         </div>
 
         <div class="news-grid-item">
           <img class="grid-img" 
           src="https://images.unsplash.com/photo-1554118879-92093d4bc16e?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mzd8fHN0cmF3YmVycmllc3xlbnwwfDB8MHx8&auto=format&fit=crop&w=500&q=60" 
           alt="tre-berries">
-           <h2 class="news-grid-heading">Time is an illusion. Lunchtime doubly so</h2>
+           <h2 class="news-grid-heading">Time is an illusion. Lunchtime doubly so.</h2>
         </div>
 
         <div class="news-grid-item">
@@ -98,3 +100,4 @@
     </section>
   </body>
 </html>
+
