--- a/code/index.html
+++ b/code/index.html
@@ -16,53 +16,56 @@
     <link href="https://fonts.googleapis.com/css2?family=Special+Elite&display=swap" rel="stylesheet">
     
      <!-- This is the header-->
-    <div class="flex-container">
     <header class="header">
-      Ye Olde News
+      <p>Ye Old News</p>
      </header>
-    </div>
 
-   <!-- This is the logo and navbar -->
-     <div class="topnav">
+    <!-- This is the logo and navbar -->
+    <nav class="topnav">
       <a class="active" href="#home">Home</a>
       <a href="#news">News</a>
       <a href="#contact">Contact</a>
       <a href="#about">About</a>
-    </div>
+    </nav>
 
       <!-- The big news content -->
-      <section class="big-news">
+      <div class="main-container">
       <h1>
-      big news
-      </section>
+      Amelia Earhart becomes the first woman to make solo nonstop transatlantic flight
       </h1>
+      <div>
+      <img src="Images/newspic.jpg"alt="Amelia Earhart"/>
+      </div>
+      </div>
   
       <!-- The other news  -->
       <section class="other-news">
       <h2>
-      other news
-      </section>
+      Other news
       </h2>
+      </section>
 
       <!-- This is the flexbox -->
     <div class="flex-container">
-      <div>
-      This is my first news story
+      <div class="flex-child"> 
+      <p>The latest on the plague: 
+        The plague continues to spread across the world.</p>
+      <img src="Images/plague.jpg" alt="Man in mask"/>
       </div>
-      <div>
-      This is my second news story
+      <div class="flex-child">
+      <p>New book review:
+        Austrian psychiatrist Sigmund Freud publishes The Interpretation of Dreams.</p>
       </div>
-      <div>
-      This is my third news story
-      </div>
-      <div>
-      <img src="newspic.jpg">
+      <div class="flex-child">
+      <p>Weather report: 
+          New storms expected this week.</p>
       </div>
     </div> 
      
       <!-- This is the footer -->
-    <footer>&copy;Marianne Ardin</footer>
+    <footer>
+      <p>&copy; Marianne Ardin </p>
+    </footer>
 
-    </section>
   </body>
 </html>
