--- a/code/index.html
+++ b/code/index.html
@@ -13,9 +13,9 @@
     <header>
       <nav>
         <ul>
-        <li><a href="https://www.goodreads.com/work/quotes/3078186-the-hitchhiker-s-guide-to-the-galaxy"> News</a></li>
-        <li><a href="https://www.goodreads.com/work/quotes/3078186-the-hitchhiker-s-guide-to-the-galaxy">Contact</a></li>
-        <li><a href="https://www.goodreads.com/work/quotes/3078186-the-hitchhiker-s-guide-to-the-galaxy">About</a></li>
+          <li><a href="https://www.goodreads.com/work/quotes/3078186-the-hitchhiker-s-guide-to-the-galaxy"> News</a></li>
+          <li><a href="https://www.goodreads.com/work/quotes/3078186-the-hitchhiker-s-guide-to-the-galaxy">Contact</a></li>
+          <li><a href="https://www.goodreads.com/work/quotes/3078186-the-hitchhiker-s-guide-to-the-galaxy">About</a></li>
       </ul>
     </nav>
     <h1 class="site-name">STRAWBERRY NEWS <br> 
@@ -26,42 +26,32 @@
     alt="logo"> 
   </header>
 
-
-
-
-
-
-    <section class="big-news">
-      <!-- The big news content -->
-      <main>
-        <h1 class="main-heading">LATEST NEWS</h1>
+    <!-- The big news content -->
+  <section class="big-news">
+   <main>
+     <h1 class="main-heading">LATEST NEWS</h1>
       
 <div class="main-content-container">
-        <img src="https://images.unsplash.com/photo-1589533610925-1cffc309ebaa?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8Nnx8c3RyYXdiZXJyaWVzfGVufDB8MHwwfHw%3D&auto=format&fit=crop&w=500&q=60" 
-        alt="main content image"  
+    <img src="https://images.unsplash.com/photo-1589533610925-1cffc309ebaa?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8Nnx8c3RyYXdiZXJyaWVzfGVufDB8MHwwfHw%3D&auto=format&fit=crop&w=500&q=60" 
+         alt="main content image"  
         class="main-content-img">
 
-  <div class="text">
-        <h1 class="article-heading"> Dolphins clame- "smartest beeings on Earth"</h1>
+<div class="text">
+     <h1 class="article-heading"> Dolphins clame- "smartest beeings on Earth"</h1>
       
-        <p class="article"> For instance, on the planet Earth, man had always assumed that he was more intelligent 
+     <p class="article"> For instance, on the planet Earth, man had always assumed that he was more intelligent 
           than dolphins because he had achieved so much—the wheel, New York, wars and so on—whilst all the dolphins 
           had ever done was muck about in the water having a good time. 
           But conversely, the dolphins had always believed that they were far more intelligent than man—for precisely the same reasons. 
           <a href="https://www.goodreads.com/work/quotes/3078186-the-hitchhiker-s-guide-to-the-galaxy"> <span class="read-more">Read more</span></a></p>   
-  </div>         
+</div>         
 </div>
-        </main>
-    </section>
+  </main>
+  </section>
 
-
-
-
-
-
-    <section>
+  <section>
       <!-- The other news  -->
-      <aside>
+   <aside>
         <div class="related-news-h1-container">
         <h1 class="related-news">RELATED NEWS</h1>
       </div>
@@ -95,9 +85,12 @@
           <h2 class="news-grid-heading">The ships hung in the sky in much the same way that bricks don't.</h2>
         </div>
         </div>
- 
+
       </aside>
     </section>
+    <footer class="footer">
+      <p>STRAWBERRY NEWS pbl</p>
+    </footer>
   </body>
 </html>
 
