added styling and js code for logo and content of news cards

--- a/code/index.html
+++ b/code/index.html
@@ -60,10 +60,10 @@
 
     <section class="cards">
       <div class="card card1">
-        <div class="category"><h4 class="subject">Culture</h4> <button class="xpand xpand-button">more</button></div>
+        <div class="category"><h4 class="subject">Europe</h4> <button class="xpand xpand-button">more</button></div>
         <section class="row1">
-          <img class="card-pic" src="https://picsum.photos/400/150">
-          <h3 class="card-title">The latest viral trend - covid themed movies and tv shows you can't miss 2022.</h3>
+          <img class="card-pic" src="https://picsum.photos/400/151">
+          <h3 class="card-title">"Nobody warned me it was against the rules": Johnson claims as the third day of 'party gate' trial ends.</h3>
         </section>
         <p class="content hide">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
       </div>
@@ -80,7 +80,7 @@
       <div class="card card3">
         <div class="category"><h4 class="subject">Technology</h4> <button class="xpand xpand-button">more</button></div>
         <section class="row1">
-          <img class="card-pic" src="https://picsum.photos/400/150">
+          <img class="card-pic" src="https://picsum.photos/400/152">
           <h3 class="card-title">Fabric masks that mimic the function of FFP2</h3>
           
         </section>
@@ -90,41 +90,41 @@
       <div class="card card4">
         <div class="category"><h4 class="subject">Europe</h4> <button class="xpand xpand-button">more</button></div>
         <section class="row1">
-          <img class="card-pic" src="https://picsum.photos/400/150">
+          <img class="card-pic" src="https://picsum.photos/400/149">
           <h3 class="card-title">Study shows: Speaking Latin reduces covid symptoms</h3>
         </section>
         <p class="content hide">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
         
       </div>
       <div class="card card5">
-        <div class="category"><h4 class="subject">Culture</h4> <button class="xpand xpand-button">more</button></div>
+        <div class="category"><h4 class="subject">Sports</h4> <button class="xpand xpand-button">more</button></div>
         <section class="row1">
-          <img class="card-pic" src="https://picsum.photos/400/150">
-          <h3 class="card-title">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</h3> 
+          <img class="card-pic" src="https://picsum.photos/400/148">
+          <h3 class="card-title">EPBF announces cancelled European Pool Championship 2022</h3> 
         </section> 
         <p class="content hide">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
       </div>
       <div class="card card6">
-        <div class="category"><h4 class="subject">Culture</h4> <button class="xpand xpand-button">more</button></div>
+        <div class="category"><h4 class="subject">World</h4> <button class="xpand xpand-button">more</button></div>
         <section class="row1">
-          <img class="card-pic" src="https://picsum.photos/400/150">
-          <h3 class="card-title">Labore et dolore magna aliqua.</h3>
+          <img class="card-pic" src="https://picsum.photos/400/153">
+          <h3 class="card-title">International vaccine passports soon to be a reality</h3>
         </section>
         <p class="content hide">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
       </div>
       <div class="card card7">
-        <div class="category"><h4 class="subject">Culture</h4> <button class="xpand xpand-button">more</button></div>
+        <div class="category"><h4 class="subject">Europe</h4> <button class="xpand xpand-button">more</button></div>
         <section class="row1">
-          <img class="card-pic" src="https://picsum.photos/400/150">
-          <h3 class="card-title">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</h3>
+          <img class="card-pic" src="https://picsum.photos/400/147">
+          <h3 class="card-title">"Lorem ipsum dolor sit amet, consectetur adipiscing elit": former covid patient laments.</h3>
         </section>
         <p class="content hide">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>     
       </div>
       <div class="card card8">
         <div class="category"><h4 class="subject">Culture</h4> <button class="xpand xpand-button">more</button></div>
         <section class="row1">
-          <img class="card-pic" src="https://picsum.photos/400/150">
-          <h3 class="card-title">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</h3>
+          <img class="card-pic" src="https://picsum.photos/400/146">
+          <h3 class="card-title">The latest viral trend - covid themed movies and tv shows you can't miss 2022. </h3>
         </section>
         <p class="content hide">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
       </div>
