--- a/code/index.html
+++ b/code/index.html
@@ -6,8 +6,8 @@
     <title>Project 2: The News Site</title>
     <link rel="stylesheet" href="./style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Cinzel&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
 
 
     <!-- dont forget the meta tag for responsiveness -->
@@ -38,19 +38,29 @@
 <hr>
     <section class="small-news">
 
-     <image class="news-small 1" src= "images/kiril-dobrev-8cQpL8kGqso-unsplash.jpg "></image>
-     <image class="news-small 2" src= "images/sergey-pesterev-mfX814jtyro-unsplash.jpg"></image>
-     <image class="news-small 3" src= "images/manuel-meurisse-sVITXInq_9k-unsplash.jpg"></image>
-     <image class="news-small 4" src="images/tatiana-zanon-VP2mjtJqWvY-unsplash.jpg"></image> 
-     <image class="news-small 5" src= "images/patrick-fore-YueS9MGF4Lo-unsplash.jpg"></image>
-     <image class="news-small 6" src= "images/fabio-comparelli-uq2E2V4LhCY-unsplash.jpg"></image>
-     <image class="news-small 7" src= "images/mathew-schwartz-s87bBFZviAU-unsplash.jpg"></image>
-     <image class="news-small 8" src= "images/steffen-wienberg-Z7FRDZBkLYo-unsplash.jpg"></image>
+     <image class="news-small one" src= "images/kiril-dobrev-8cQpL8kGqso-unsplash.jpg "></image>   
+      <h3>The worlds most beautiful places to dive in</h3> 
 
+     <image class="news-small two" src= "images/sergey-pesterev-mfX814jtyro-unsplash.jpg"></image>
+      <h3>Hike trip to Kilimanjaro</h3>
 
-     </section> 
+     <image class="news-small three" src= "images/manuel-meurisse-sVITXInq_9k-unsplash.jpg"></image>
+      <h3>The beateful sights of Lofoten</h3>
+
+     <image class="news-small four" src="images/tatiana-zanon-VP2mjtJqWvY-unsplash.jpg"></image> 
+      <h3>The magic of Marrakech</h3>
+
+     <image class="news-small five" src= "images/fabio-comparelli-uq2E2V4LhCY-unsplash.jpg"></image>
+      <h3>The worlds greates bridges</h3>
+
+     <image class="news-small six" src= "images/patrick-fore-YueS9MGF4Lo-unsplash.jpg"></image>
+      <h3>The best surfing destinations to catch the perfect wave</h3>
+
+   </section> 
 
     </article>  
+
+    <footer><h4>Follow us for more Travel content</h4></footer>
 
 
       <!-- The other news  -->
