updated all requirement

--- a/code/index.html
+++ b/code/index.html
@@ -26,14 +26,6 @@
   </div>
 </div>
 </header>
-<header class="tabanddesktopmenu">
-    <img class="item1" src="img/logo.jpg" alt="logo"/>
-    <div class="item2">Visit St.Martin</div>
-    <div class="item3"><a href="#home">Home</a></div>
-    <div class="item4"><a href="#hotel">List of Hotel</a></div>
-    <div class="item5"><a href="#blog">Blog</a></div>
-    <div class="item6"><a href="#contact">Contact</a></div>
-  </header>
 
 <!--Main text upper part-->
     <section class="big-news">
@@ -116,6 +108,10 @@
         </div>
       </div>
     </section>
+    <footer>
+      <p>Developed by Eyahya Khan @Bootcamp 2022</p>
+
+    </footer>
     
   </body>
 </html>
