--- a/code/index.html
+++ b/code/index.html
@@ -51,7 +51,7 @@
         This record was broken on the Guinness World Record Challengers site.</p>
     <p>Read all about this on <a href="https://www.guinnessworldrecords.com/world-records/most-matchsticks-stacked-into-a-tower-in-1-minute">Guiness World Record site! </a></p>
 
-    <p>Also check these inspiring records of <a href="https://www.guinnessworldrecords.com/world-records/111405-most-matchsticks-extinguished-with-the-tongue-in-one-minute">Most matchsticks extinguished with the tongue in one minute</a>
+    <p>Also check out these inspiring records of <a href="https://www.guinnessworldrecords.com/world-records/111405-most-matchsticks-extinguished-with-the-tongue-in-one-minute">Most matchsticks extinguished with the tongue in one minute</a>
       and <a href="https://www.guinnessworldrecords.com/world-records/77623-match-throwing-distance">Farthest distance to throw a matchstick</a>.</p>
     </article>
 
@@ -63,11 +63,12 @@
 
     <section class="other-news">
       <!-- The other news  -->
-    <a href="#">
-    <img src="https://images.unsplash.com/photo-1603725480605-78be520d0e6a?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80"
-    alt="two-burning-matchsticks"/>
-    <h3>The history of matchsticks - a brand new deep dive article</h3>
-    </a>
+   
+      <a href="#">
+        <img src="https://images.unsplash.com/photo-1612490689975-c062b1bdcec7?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80"
+        alt="heart-on-a-match"/>
+        <h3>Valentines-day special: cute crafting</h3>
+        </a>
 
     <a href="#">
     <img src="https://images.unsplash.com/photo-1506947456723-02bab3048abb?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1171&q=80"
@@ -82,22 +83,32 @@
     </a>
 
     <a href="#">
-    <img src="https://images.unsplash.com/photo-1466120262033-5fb3f4f67132?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2031&q=80"
-    alt="many-matchsticks-burning"/>
+      <img src="https://images.unsplash.com/photo-1603725480605-78be520d0e6a?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80"
+      alt="two-burning-matchsticks"/>
+      <h3>The history of matchsticks - a brand new deep dive article</h3>
+      </a>
+
+    <a href="#">
+    <img src="https://images.unsplash.com/photo-1510672981848-a1c4f1cb5ccf?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1172&q=80"
+    alt="many-marshmellows-burning"/>
     <h3>Big test of all the match box brands</h3>
     </a>
 
     <a href="#">
-    <img src="https://images.unsplash.com/photo-1612490689975-c062b1bdcec7?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80"
-    alt="heart-on-a-match"/>
-    <h3>Valentines-day special: cute crafting</h3>
+    <img src="https://images.unsplash.com/photo-1629573008286-a42714461498?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80"
+    alt="matchsticks-in-a-circle"/>
+    <h3>5 myths about matchsticks - test your quiz skills!</h3></a>
+
+    <a href="#">
+    <img src="https://images.unsplash.com/photo-1615438263242-4be229da469e?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1172&q=80"
+    alt="girl-by-flames"/>
+    <h3>Interview with fire artist Pyra - revealing some secrets from her brand new pyrotechnic show!</h3>
     </a>
 
     <a href="#">
-    <img src="https://images.unsplash.com/photo-1533866254047-a8ec7410aa35?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1448&q=80"
-    alt="red-lipstick-and-burning-match"/>
-    <h3>Interview with fire artist Pyra - revealing some secrets from her brand new pyrotechnic show!</h3>
-    </a>
+      <img src="https://images.unsplash.com/photo-1519686270607-648e58bb7563?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80"
+      alt="match-lighting-map"/>
+      <h3>A world of matches - fun facts and statistics!</h3></a>
 
 
     </section>
