Added new color scheme and images

--- a/code/index.html
+++ b/code/index.html
@@ -9,31 +9,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     
     <!-- CSS -->
-    <link rel="stylesheet" href="./reset.css" />
+    
     <link rel="stylesheet" href="./style.css" />
 
     <!-- Fonts -->
-    <link
-      href="https://fonts.googleapis.com/css2?family=Balsamiq+Sans&display=swap"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Slab|Ruda" rel="stylesheet">
   </head>
   <body>
 
     <!-- Header -->
 
     <header class="main-header">
-      <!-- Lägger in fake logo så länge, ändra till riktig logga sen -->
-      <div class="logo-container"><img src="./images/train_black_24dp.svg" /></div>
-      <!-- För att ändra tillbaka till fejkloggan, lägg in:
-        <div class="logo"><span>Fake logo</span></div>
-        -->
-      <h1>Interrail News</h1>
+      <div class="logo-container"><img src="./images/carrot-icon.png" /></div>
+      <h1>Veggie News</h1>
       <nav>
         <ul>
           <li><a href="#">About us</a></li>
           <li><a href="#">Contact</a></li>
-          <li><a href="#">Link</a></li>
+          <li><a href="#">Nutrition</a></li>
         </ul>
       </nav>
     </header>
@@ -44,13 +37,13 @@
 
     <section class="big-news">
       <div class="image-container big-news-child">
-        <img
-          src="./images/johannes-hofmann-PM5a_R83-YQ-unsplash-edited.jpg"
-          alt="train on a bridge"
-        />
+        <a href="https://unsplash.com/photos/jSQxj-Ug0H8"><img
+          src="./images/broccoli.jpg"
+          alt="broccoli"
+        /></a>
       </div>
       <article class="main-news big-news-child">
-        <h2>Här är huvudnyheten</h2>
+        <h2>Broccoli</h2>
         <p>
           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
           eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
@@ -77,65 +70,72 @@
     <section class="other-news">
       <article class="card">
         <img
-          src="./images/johannes-hofmann-PM5a_R83-YQ-unsplash-edited.jpg"
-          alt="train on a bridge"
+          src="./images/avocado.jpg"
+          alt="avocado"
         />
         <div class="other-news-content">
-            <h2>Heading</h2>
+            <h2>Avocado</h2>
+            <p>Lite text här..</p>
         </div>
       </article>
       <article class="card">
         <img
-          src="./images/johannes-hofmann-PM5a_R83-YQ-unsplash-edited.jpg"
-          alt="train on a bridge"
+          src="./images/kale.jpg"
+          alt="kale"
         />
         <div class="other-news-content">
-            <h2>Heading</h2>
+            <h2>Kale</h2>
+            <p>Lite text här</p>
         </div>
       </article>
       <article class="card">
         <img
-          src="./images/johannes-hofmann-PM5a_R83-YQ-unsplash-edited.jpg"
-          alt="train on a bridge"
+          src="./images/brussels-sprouts.jpg"
+          alt="Brussels sprouts"
         />
         <div class="other-news-content">
-            <h2>Heading</h2>
+            <h2>Brussels sprouts</h2>
+            <p>Lite text här</p>
         </div>
       </article>
       <article class="card">
         <img
-          src="./images/johannes-hofmann-PM5a_R83-YQ-unsplash-edited.jpg"
-          alt="train on a bridge"
+          src="./images/bellpepper.jpg"
+          alt="Bell pepper"
         />
         <div class="other-news-content">
-            <h2>Heading</h2>
+            <h2>Bell pepper</h2>
+            <p>Lite text här</p>
         </div>
       </article>
       <article class="card">
         <img
-          src="./images/johannes-hofmann-PM5a_R83-YQ-unsplash-edited.jpg"
-          alt="train on a bridge"
+          src="./images/beetroot.jpg"
+          alt="Beetroot"
         />
         <div class="other-news-content">
-            <h2>Heading</h2>
+            <h2>Beetroot</h2>
+            <p>Lite text här</p>
         </div>
       </article>
       <article class="card">
         <img
-          src="./images/johannes-hofmann-PM5a_R83-YQ-unsplash-edited.jpg"
-          alt="train on a bridge"
+          src="./images/cauliflower2.jpg"
+          alt="cauliflower"
         />
         <div class="other-news-content">
-            <h2>Heading</h2>
+            <h2>Cauliflower</h2>
+            <p>Lite text här</p>
         </div>
       </article>
       <article class="card">
         <img
-          src="./images/johannes-hofmann-PM5a_R83-YQ-unsplash-edited.jpg"
-          alt="train on a bridge"
+          src="./images/tomato.jpg"
+          alt="tomato"
         />
         <div class="other-news-content">
-            <h2>Heading</h2>
+            <h2>Tomato</h2>
+            <p>Lite text här</p>
         </div>
       </article>
     </section>
@@ -147,7 +147,7 @@
     <!-- Footer -->
 
     <footer>
-      <p>Copyright</p>
+      <p>&copy; 2022 Jessica Sandler</p>
     </footer>
   </body>
 </html>
