Final result, added text to image

--- a/code/index.html
+++ b/code/index.html
@@ -14,10 +14,10 @@
   
       <div class="right-header">
         <ul class="header-links">
-          <li>Home</li>
-          <li>Contact</li>
-          <li>About</li>
-          <li>Service</li>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">Contact</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Service</a></li>
         </ul>
         
       </div>
@@ -30,14 +30,54 @@
     </div>
   
     <div class="small-news">
-      <div class="small-box"><img src="./images/fruit3.jpg" alt=""></div>
-      <div class="small-box"><img src="./images/lighter.jpg" alt=""></div>
-      <div class="small-box"><img src="./images/chili.jpg" alt=""></div>
-      <div class="small-box"><img src="./images/coffee.jpg" alt=""></div>
-      <div class="small-box"><img src="./images/mask.jpg" alt=""></div>
-      <div class="small-box"><img src="./images/fruit2.jpg" alt=""></div>
-      <div class="small-box"><img src="./images/spruta.jpg" alt=""></div>
-      <div class="small-box"><img src="./images/cactus.jpg" alt=""></div>
+      <div class="small-box"><img src="./images/fruit3.jpg" alt="Avatar" class="image" style="width: 100%">
+        <div class="middle">
+          <div class="text">Lorem ipsum dolor sit amet</div>
+
+        </div>
+      </div>
+      <div class="small-box"><img src="./images/lighter.jpg" alt="Avatar" class="image" style="width: 100%">
+        <div class="middle">
+          <div class="text">Lorem ipsum dolor sit amet</div>
+
+        </div>
+      </div>
+      <div class="small-box"><img src="./images/chili.jpg" alt="Avatar" class="image" style="width: 100%">
+        <div class="middle">
+          <div class="text">Lorem ipsum dolor sit amet</div>
+
+        </div>
+      </div>
+      <div class="small-box"><img src="./images/coffee.jpg" alt="Avatar" class="image" style="width: 100%">
+        <div class="middle">
+          <div class="text">Lorem ipsum dolor sit amet</div>
+
+        </div>
+      </div>
+      <div class="small-box"><img src="./images/mask.jpg" alt="Avatar" class="image" style="width: 100%">
+        <div class="middle">
+          <div class="text">Lorem ipsum dolor sit amet</div>
+
+        </div>
+      </div>
+      <div class="small-box"><img src="./images/fruit2.jpg" alt="Avatar" class="image" style="width: 100%">
+        <div class="middle">
+          <div class="text">Lorem ipsum dolor sit amet</div>
+
+        </div>
+      </div>
+      <div class="small-box"><img src="./images/spruta.jpg" alt="Avatar" class="image" style="width: 100%">
+        <div class="middle">
+          <div class="text">Lorem ipsum dolor sit amet</div>
+
+        </div>
+      </div>
+      <div class="small-box"><img src="./images/cactus.jpg" alt="Avatar" class="image" style="width: 100%">
+        <div class="middle">
+          <div class="text">Lorem ipsum dolor sit amet</div>
+
+        </div>
+      </div>
     </div>
   </div>
 
