added tablet and desktop size

--- a/code/index.html
+++ b/code/index.html
@@ -19,10 +19,8 @@
     <header class="header">
       <div class="header-logo"><img src="/images/header-logo-yoga.JPG" alt="logo-yoga" class="round-logo-yoga"></div>
       <div class="site-name"><h1>The Yoga Journal</h1></div>
-
       <div class="nav-bar">
         <ul>
-          <li><a href="default.asp">Home</a></li>
           <li><a href="asanas.asp">Asanas</a></li>
           <li><a href="breathe.asp">Breathe</a></li>
           <li><a href="contact.asp">Contact</a></li>
@@ -36,7 +34,8 @@
         <img src="./images/big-news.jpg" alt="girl doing yoga">
       </div>
       <div class="big-card-text">
-        <h2>The True Benefits of Yoga</h2>
+        
+        <h2>The Benefits of Yoga <span style='font-size:24px;'>&#10084;</span></h2>
         <p>Dozens of scientific trials of varying quality have been published on yoga. While there's scope for more rigorous studies on its health benefits, most studies suggest yoga is a safe and effective way to increase physical activity – especially strength, flexibility and balance. <br><br>There's some evidence that regular yoga practice may be beneficial for people with high blood pressure, heart disease, aches and pains – including lower back pain – depression and stress.</p>
       </div>
     </section>
@@ -67,7 +66,7 @@
 
         <div class="card5">
           <img src="images/small-news-5.jpg" alt="yoga pose">
-          <h3>Grow Your Strength with Shoulder-Stands!</h3>
+          <h3>Strength in Shoulder-Stand!</h3>
         </div>
 
         <div class="card6">
@@ -91,7 +90,10 @@
         <p>Made by Camilla Hallberg @ Technigo Bootcamp Spring 2022</p>
       </div>
       <div class="image-credit">
-        <p>All images from <a href="https://unsplash.com/">Unsplash</a></p>
+        <p>Images from <a href="https://unsplash.com/">Unsplash.</a></p>
+      </div>
+      <div class="logo-credit">
+        <p>Logo © Camilla Hallberg</p>
       </div>
     </footer>
 
