Styling, new logo, hover effects

--- a/code/index.html
+++ b/code/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Her Money</title>
+    <title>HER MONEY</title>
     <link rel="stylesheet" href="./style.css" />
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,7 +13,8 @@
       <!-- Logo & Navbar -->
       <nav>
         <ul class="menu">
-            <li class="logo"><a href="#">Her Money</a></li>
+          <a href="index.html" class="logo"><img class="logo" src="logo.svg" alt="logotype"/></a>
+            <!-- <li class="logo"><a href="#">Her Money</a></li> -->
             <li class="item"><a href="#">Home</a></li>
             <li class="item"><a href="#">About</a></li>
             <li class="item"><a href="#">Contact</a></li>
