--- a/code/index.html
+++ b/code/index.html
@@ -56,7 +56,7 @@
 
         <div class="card3">
           <img src="images/small-news-3.jpg" alt="yoga girl doing a backbend">
-          <h3>Yoga Retreats in California</h3>
+          <h3>Yoga Retreats - Travel to California</h3>
         </div>
 
         <div class="card4">
@@ -66,7 +66,7 @@
 
         <div class="card5">
           <img src="images/small-news-5.jpg" alt="yoga pose">
-          <h3>Strength in Shoulder-Stand!</h3>
+          <h3>Gain Strength in Your Shoulder-Stand!</h3>
         </div>
 
         <div class="card6">
