--- a/code/index.html
+++ b/code/index.html
@@ -13,11 +13,11 @@
       <!-- Logo & Navbar -->
       <nav>
         <ul class="menu">
-          <a href="index.html" class="logo"><img class="logo" src="logo.svg" alt="logotype"/></a>
-            <!-- <li class="logo"><a href="#">Her Money</a></li> -->
-            <li class="item"><a href="#">Home</a></li>
-            <li class="item"><a href="#">About</a></li>
-            <li class="item"><a href="#">Contact</a></li>
+          <a href="index.html" class="logo">
+            <img class="logo" src="logo.svg" alt="logotype"/></a>
+            <li class="item"><a href="index.html">Home</a></li>
+            <li class="item"><a href="index.html">About</a></li>
+            <li class="item"><a href="index.html">Contact</a></li>
         </ul>
     </nav>
     </header>
@@ -26,7 +26,7 @@
     <section class="big-news">
       <div class="columns">
         <div class="column image">
-          <img class="main-img" src="https://images.unsplash.com/photo-1469334031218-e382a71b716b?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80" alt="Woman in control of her finances">
+          <img class="main-img" src="https://images.unsplash.com/photo-1524686599807-08a16b19fefd?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80" alt="Woman in control of her finances">
         </div>
         <div class="column article">
           <h2 class="main-text-top">Successfully Negotiate a Higher Salary</h2>
@@ -42,7 +42,7 @@
         <div class="article-box">
           <div class="news-article">
             <div class="other-image">
-              <img class="other-news-image" src="https://images.unsplash.com/photo-1469334031218-e382a71b716b?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80" alt="Woman in control of her finances">
+              <img class="other-news-image" src="image-1.jpg" alt="Woman in control of her finances">
             </div>
             <div class="article-text">
               <h2 class="text-top">Feeling overwhelmed with where to start?</h2>
@@ -52,7 +52,7 @@
           </div>
           <div class="news-article">
             <div class="other-image">
-              <img class="other-news-image" src="https://images.unsplash.com/photo-1469334031218-e382a71b716b?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80" alt="Woman in control of her finances">
+              <img class="other-news-image" src="image-2.jpg" alt="Woman in control of her finances">
             </div>
             <div class="article-text">
               <h2 class="text-top">Feeling overwhelmed with where to start?</h2>
@@ -64,7 +64,7 @@
         <div class="article-box">
           <div class="news-article">
             <div class="other-image">
-              <img class="other-news-image" src="https://images.unsplash.com/photo-1469334031218-e382a71b716b?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80" alt="Woman in control of her finances">
+              <img class="other-news-image" src="image-3.jpg" alt="Woman in control of her finances">
             </div>
             <div class="article-text">
               <h2 class="text-top">Feeling overwhelmed with where to start?</h2>
@@ -74,7 +74,7 @@
           </div>
           <div class="news-article">
             <div class="other-image">
-              <img class="other-news-image" src="https://images.unsplash.com/photo-1469334031218-e382a71b716b?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80" alt="Woman in control of her finances">
+              <img class="other-news-image" src="image-4.jpg" alt="Woman in control of her finances">
             </div>
             <div class="article-text">
               <h2 class="text-top">Feeling overwhelmed with where to start?</h2>
@@ -88,7 +88,7 @@
         <div class="article-box">
           <div class="news-article">
             <div class="other-image">
-              <img class="other-news-image" src="https://images.unsplash.com/photo-1469334031218-e382a71b716b?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80" alt="Woman in control of her finances">
+              <img class="other-news-image" src="image-5.jpg" alt="Woman in control of her finances">
             </div>
             <div class="article-text">
               <h2 class="text-top">Feeling overwhelmed with where to start?</h2>
@@ -98,7 +98,7 @@
           </div>
           <div class="news-article">
             <div class="other-image">
-              <img class="other-news-image" src="https://images.unsplash.com/photo-1469334031218-e382a71b716b?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80" alt="Woman in control of her finances">
+              <img class="other-news-image" src="image-6.jpg" alt="Woman in control of her finances">
             </div>
             <div class="article-text">
               <h2 class="text-top">Feeling overwhelmed with where to start?</h2>
@@ -110,7 +110,7 @@
         <div class="article-box">
           <div class="news-article">
             <div class="other-image">
-              <img class="other-news-image" src="https://images.unsplash.com/photo-1469334031218-e382a71b716b?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80" alt="Woman in control of her finances">
+              <img class="other-news-image" src="image-7.jpg" alt="Woman in control of her finances">
             </div>
             <div class="article-text">
               <h2 class="text-top">Feeling overwhelmed with where to start?</h2>
@@ -120,7 +120,7 @@
           </div>
           <div class="news-article">
             <div class="other-image">
-              <img class="other-news-image" src="https://images.unsplash.com/photo-1469334031218-e382a71b716b?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80" alt="Woman in control of her finances">
+              <img class="other-news-image" src="image-8.jpg" alt="Woman in control of her finances">
             </div>
             <div class="article-text">
               <h2 class="text-top">Feeling overwhelmed with where to start?</h2>
