changed img and footer size

--- a/code/index.html
+++ b/code/index.html
@@ -81,10 +81,10 @@
     <footer>
       <div class="footer-container">
         <div class="footer-icons">
-          <i class="fab fa-twitter fa-2x"></i>
-          <i class="fab fa-facebook-f fa-2x"></i>
-          <i class="fab fa-instagram fa-2x"></i>
-          <i class="fas fa-envelope fa-2x"></i>
+          <i class="fab fa-twitter fa"></i>
+          <i class="fab fa-facebook-f fa"></i>
+          <i class="fab fa-instagram fa"></i>
+          <i class="fas fa-envelope fa"></i>
        </div>
         <p class="copywrite">© Copyright Josefin Eliasson 2022</p>
       </div> 
