--- a/code/index.html
+++ b/code/index.html
@@ -51,7 +51,7 @@
         <div class="sixt">
           <section id="car"></section>
           <img src="sixt.jpeg" alt="sixt">
-          <h1>Sixt reports record quaterly profit as recovery continues</h1>
+          <h1>Sixt reports record quaterly profit</h1>
         </div>
         <div class="hertz">
           <img src="hertz-elonmusk.jpeg" alt="hertz elon musk">
